conf: 환경설정 파일 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     import:
       - classpath:/application.yml
       - classpath:/application-db.yml
-      - classpath:/application-jwt.yml
+      - classpath:/application-encryption.yml
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
