--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ Temporary Items
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+src/main/resources/application-db.yml
+src/main/resources/application-encryption.yml
