--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -4,3 +4,6 @@ spring:
     url: jdbc:mysql://localhost:3306/altinus_pretest?serverTimezone=UTC&characterEncoding=UTF-8
     username: altinus
     password: altinus1234
+  redis:
+    host: localhost
+    port: 6379
